RESOLVED FIXED62752
[GTK] Transition to Mozilla named cursors have incorrect hotspot and rendering
https://bugs.webkit.org/show_bug.cgi?id=62752
Summary [GTK] Transition to Mozilla named cursors have incorrect hotspot and rendering
Martin Robinson
Reported 2011-06-15 13:32:50 PDT
When the view cursor switches to a Mozilla named cursor, the pointer jumps to a different location. Additionally the hotspot is incorrect. This is visible when dragging the slider on today's Google doodle (lunar eclipse). These are cached here for posterity: http://www.google.com/logos/. You can also see this in Source/WebCore/manual-tests/cur-hotspot.html.
Attachments
Patch (2.07 KB, patch)
2011-06-15 13:40 PDT, Martin Robinson
dbates: review+
Martin Robinson
Comment 1 2011-06-15 13:40:32 PDT
Eric Seidel (no email)
Comment 2 2011-06-16 21:08:29 PDT
Comment on attachment 97357 [details] Patch Makes sense. How do we test this?
Martin Robinson
Comment 3 2011-06-16 21:45:57 PDT
(In reply to comment #2) > (From update of attachment 97357 [details]) > Makes sense. How do we test this? I don't think there are automated tests for cursors, so we just have to rely on the manual test at Source/WebCore/manual-tests/cursor.html.
Daniel Bates
Comment 4 2011-07-06 21:03:07 PDT
Comment on attachment 97357 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=97357&action=review > Source/WebCore/ChangeLog:11 > + * manual-tests/cursor.html: The grab cursor div covers this change. Nit: On my first read of this commit message I thought you that you were adding this test since you use the same '*:' style as prepare-ChangeLog. I suggest writing a complete sentence instead of using the same notation. Maybe something like: "This change is covered by the grab cursor div in manual-tests/cursor.html."
Martin Robinson
Comment 5 2011-07-11 15:43:08 PDT
Martin Robinson
Comment 6 2011-07-11 15:43:26 PDT
Thanks for the review! I used the line: "No new tests. This is covered by manual-tests/cursor.html."
Note You need to log in before you can comment on or make changes to this bug.