Reviewed by Daniel Bates.

[GTK] Transition to Mozilla named cursors have incorrect hotspot and rendering
https://bugs.webkit.org/show_bug.cgi?id=62752

Instead of offsetting the cursor blit by the hotspot, just pass the hotspot
arguments to the GdkCursor constructor.

No new tests. This is covered by manual-tests/cursor.html.

* platform/gtk/CursorGtk.cpp:
(WebCore::createNamedCursor):

Canonical link: https://commits.webkit.org/80052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90788 268f45cc-cd09-0410-ab3c-d52691b4dbfc